--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2 class="hero__subtitle">Hi, I'm Raffy🤝</h2>
         <h1 class="hero__title">FRONT-END<br>WEB DEVELOPER</h1>
         <p class="hero__description">"Welcome to my website, where we strive to provide you with an exceptional <strong> online experience!</strong>"</p>
-        <a class="hero__btn" download href="img/Resumekoto.pdf">Download Cv</a>
+        <a class="hero__btn" download href="img/Resumekoto.pdf" target="_blank">Download Cv</a>
     </section>
 
                          <!----------------------------- about ----------------------------->
@@ -51,9 +51,8 @@
         </div>
         <div class="about-content">
             <h3>Frontend & Web Developer</h3>
-            <p>Hello there! I'm <strong> Raffy L. Veloria</strong>, a passionate and motivated
-                 Computer Science graduate with a strong desire to make a
-                  positive impact in the world through technology</p>
+            <p>Hello there! I'm <strong> Raffy L. Veloria</strong>, 24 years old a passionate and motivated
+                 Computer Science graduate with a passion of problem solving and technology </p>
                  <a class="hero__btn">Read More</a>
         </div>
     </div>
@@ -205,15 +204,15 @@
             </div>
             <div class="footer-content">
                 <h4>Services</h4>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">Web Developer</a></li>
+                <li><a href="#" target="_blank">Web Design</a></li>
+                <li><a href="#" target="_blank">Web Developer</a></li>
             </div>
             <div class="footer-content">
                 <h4>Courses</h4>
-                <li><a href="https://www.w3schools.com/">HTML & CSS</a></li>
-                <li><a href="https://www.w3schools.com/js/">Javascript</a></li>
-                <li><a href="https://www.php.net/">PHP</a></li>
-                <li><a href="https://tailwindcss.com/">TailwindCss</a></li>
+                <li><a href="https://www.w3schools.com/" target="_blank">HTML & CSS</a></li>
+                <li><a href="https://www.w3schools.com/js/ target="_blank"">Javascript</a></li>
+                <li><a href="https://www.php.net/" target="_blank">PHP</a></li>
+                <li><a href="https://tailwindcss.com/" target="_blank">TailwindCss</a></li>
             </div>
         </div>
 
