--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="about" id="aboutus">
     <div class="project__titles">About Us</div>
         <div class="about-img">
-            <img src="img/hero__logo.png" alt="">
+            <img src="img/profile2.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
         <div class="about-content">
